<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android = "http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/tv_search_name"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>

    <EditText
        android:id="@+id/etSearchName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginStart="10dp"
        android:textSize="20sp"
        android:gravity="center"
        android:hint="@string/ed_search_name_hint"
        android:autofillHints=""
        android:inputType="text" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal"
        android:baselineAligned="false">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/tv_radius"
            android:textSize="20sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

        <Spinner
            android:id="@+id/spRange"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:entries="@array/sp_range"
            android:layout_gravity="center_vertical"/>

        </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:text="@string/tv_limit"
        android:textSize="20sp"
        android:textColor="@color/colorBlack"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbNoSmoking"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cb_no_smoking"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/cbPrivateRoom"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/cb_private_room"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbBuffet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cb_buffet"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/cbBottomless"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/cb_bottomless_cup"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbTakeout"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cb_takeout"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/cbMidnight"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/cb_midnight"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="10dp"
        android:layout_marginRight="10dp"
        android:orientation="horizontal">

        <CheckBox
            android:id="@+id/cbEMoney"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:text="@string/cb_e_money"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

        <CheckBox
            android:id="@+id/cbWithPet"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="0.5"
            android:layout_marginLeft="10dp"
            android:layout_marginStart="10dp"
            android:text="@string/cb_with_pet"
            android:textSize="18sp"
            android:textColor="@color/colorBlack"
            android:layout_gravity="center_vertical"/>

    </LinearLayout>

    <Button
        android:id="@+id/btSearch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="10dp"
        android:onClick="onSearchClick"
        android:text="@string/bt_search"
        android:textSize="20sp"/>

</LinearLayout>