<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvStoreName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="20sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvCategory"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/colorDarkShadow"
                tools:ignore="SmallSp"/>

        </LinearLayout>

        <HorizontalScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_gravity="center_horizontal">

                <ImageView
                    android:id="@+id/ivImage1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

                <ImageView
                    android:id="@+id/ivImage2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>

            </LinearLayout>

        </HorizontalScrollView>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            android:orientation="vertical">

            <TextView
                android:id="@+id/tvBusinessHours"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvHoliday"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorRed"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:orientation="vertical">

                    <TextView
                        android:id="@+id/tvAddress"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="16sp"
                        android:textColor="@color/colorBlack"/>

                    <TextView
                        android:id="@+id/tvAccessDetail"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:textSize="12sp"
                        android:textColor="@color/colorDarkShadow"/>

                </LinearLayout>

                <Button
                    android:id="@+id/btToMap"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_marginStart="10dp"
                    android:text="@string/bt_to_map"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    android:layout_gravity="bottom"/>

            </LinearLayout>

            <TextView
                android:id="@+id/tvPR"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/tv_PR"
                android:textSize="16sp"
                android:textColor="@color/colorBlack"/>

            <TextView
                android:id="@+id/tvPRLong"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textSize="12sp"
                android:textColor="@color/colorBlack"
                android:background="@color/colorShadow"/>

            <Space
                android:layout_width="match_parent"
                android:layout_height="10dp"/>

            <TableLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/colorBlack">

                <TableRow>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginTop="1dp"
                        android:layout_marginLeft="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/tv_budget_title"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center"
                        android:background="@color/colorShadow"/>

                    <TextView
                        android:id="@+id/tvBudget"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_margin="1dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:background="@color/colorWhite"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/tv_credit_card_title"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center"
                        android:background="@color/colorShadow"/>

                    <TextView
                        android:id="@+id/tvCreditCard"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:background="@color/colorWhite"/>

                </TableRow>

                <TableRow>

                    <TextView
                        android:layout_width="100dp"
                        android:layout_height="match_parent"
                        android:layout_marginLeft="1dp"
                        android:layout_marginStart="1dp"
                        android:layout_marginBottom="1dp"
                        android:text="@string/tv_e_money_title"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:gravity="center"
                        android:background="@color/colorShadow"/>

                    <TextView
                        android:id="@+id/tvEMoney"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:layout_marginLeft="1dp"
                        android:layout_marginRight="1dp"
                        android:layout_marginBottom="1dp"
                        android:paddingLeft="5dp"
                        android:paddingRight="5dp"
                        android:textSize="12sp"
                        android:textColor="@color/colorBlack"
                        android:background="@color/colorWhite"/>

                </TableRow>

            </TableLayout>

            <TextView
                android:id="@+id/tvTEL"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:textSize="10sp"
                android:textColor="@color/colorDarkShadow"
                tools:ignore="SmallSp"/>

            <TextView
                android:id="@+id/tvFAX"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textSize="10sp"
                android:textColor="@color/colorDarkShadow"
                tools:ignore="SmallSp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <Button
                    android:id="@+id/btCall"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:text="@string/bt_call"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    tools:ignore="ButtonStyle"/>

                <Button
                    android:id="@+id/btMobilePage"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.5"
                    android:layout_margin="5dp"
                    android:text="@string/bt_mobile_page"
                    android:textSize="16sp"
                    android:textColor="@color/colorBlack"
                    tools:ignore="ButtonStyle"/>

            </LinearLayout>

        </LinearLayout>

    </LinearLayout>

</ScrollView>